force-app/core/objects/Feeding__c/Feeding__c.object-meta.xml
<CustomObject>
    <label>Feeding</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Feeding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>