force-app/core/objects/Feeding__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Amount in Ounces</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>