force-app/core/objects/Feeding__c/fields/Baby__c.field-meta.xml
<CustomField>
    <fullName>Baby__c</fullName>
    <label>Baby</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedings</relationshipLabel>
    <relationshipName>Feedings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>