force-app/core/objects/Feeding__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Left then Right</fullName>
            </value>
            <value>
                <fullName>Right then Left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>